Version 0.4 -- Subversion
-----------------

* Added module API
* Added news module
* Added subsections
* Added copyright notice to bottom on all generated pages in a comment
* Switched WYSIWYGs from tinymce to htmlarea

Version 0.3.2 -- Thu Jul 29 2004
-----------------

* Added version check to install.php
* Added check to make sure bbcode exists before using it
* Fixed link to cmsmadesimple in footer
* Fixed bug in displaying 404 pages
* Fixed a nasty bug where link pages would file to show in the content list
* Fixed addcontent so it sets showinmenu correctly

Version 0.3.1 -- Tue Jul 27 2004
-----------------

* Added ownership change to editcontent
* Added {title} tag (Fixes #23)
* Added adodb for database connectivity.  Will be a good thing for down the
road in supporting multiple databases
* Added template name to content list page  (Fixes #28)
* Added check to make sure users don't still own pages before the user is
deleted
* Added French translation (calexico@ifrance.com)
* Fixed so that if no default page is set, system grabs first page it can find
(Fixes #22)
* Fixed redirection. (pdj@txnt.com) (Fixes #27)
* Fixed nasty bug with changeperm and changeassign (fcardone@wp.pl) (Fixes
#29, #30)

Version 0.3 -- Wed Jul 21 2004
-----------------

* Added PEAR.php to the lib directory for hosts that may not have it (Fixes #13)
* Added section reordering (Fixes #4)
* Added index to tables to make querying faster on the frontend (Fixes #1)
* Added password hashing for insecure hosts  (Fixes #11)
* Added content types to content creation and editing (Fixes #5)
* Added the link content type
* Added proper 404 error for pages that are not found or active (Fixes #18)
* Added admin logging and a simple report (Fixes #21)
* Added TinyMCE WYSIWYG editor for content (Fixes #10)
* Added user preferences page
* Added option to turn on/off wysiwyg in user preferences
* Changed database abstraction so that it will be able to use other db
backends in the future (Fixes #19)